Pushing from pycharm

--- a/templates/display.html
+++ b/templates/display.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<title></title>
 </head>
 <body>
 
-<table border="1">
+<h2>9054</h2>
+<h2>Bhangale, Riya Rajendra</h2><br>
+{##}
+{#<table border="1">#}
+{##}
+{#{{ data1 }}#}
+{#{{ isCache }}#}
+{#    {% for row in data %}#}
+{#    <tr>#}
+{#    <td>{{ row[5] }}</td>#}
+{##}
+{##}
+{#    </tr>#}
+{#    {% endfor %}#}
+{##}
+{#</table>#}
+{#<a href="/">Home</a>#}
 
-{{ data1 }}
-{{ isCache }}
-    {% for row in data %}
-    <tr>
-    <td>{{ row[5] }}</td>
 
+<table border=1>
+{#<tr>#}
+{#    <td></td>#}
+{#</tr>#}
 
-    </tr>
-    {% endfor %}
+{% for rows in info %}
+<tr>
+<td>{{ rows[1] }}</td>
+<td>{{ rows[2] }}</td>
+<td>{{ rows[3] }}</td>
+</tr>
 
+{% endfor %}
 </table>
-<a href="/">Home</a>
-
 </body>
 </html>
