--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<title></title>
 </head>
 <body>
-<h1>Shevi Jain 1344</h1>
+
+<h2>9054</h2>
+<h2>Bhangale, Riya Rajendra</h2><br>
 <br>
 <form method="POST" action="{{ url_for('adddata') }}" enctype= "multipart/form-data">
         <label><h2> Upload CSV</h2></label>
