Calculating Time for table

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,22 +8,16 @@
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
 <br>
-
-
-
-
 		 Result of Addition {{ msg }}
-
-
 <br>
-<a href="/upload">Upload csv</a>
+<a href="/uploadCSV">Upload csv</a>
 <br>
 <br>
-		 <a href = "/adddata">Result of add</a>
+{#<a href = "/addAlldata">Result of add</a>#}
 <br>
-		 <a href = "/display">Display all records</a>
-<br>
-		 <a href = "/multiple">multiple all records</a>
+<a href = "/displayAll">Display all records</a>
+{#<br>#}
+{#<a href = "/multiple">multiple all records</a>#}
 
 </body>
 </html>
