--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,13 +8,13 @@
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
 <br>
-<form method="POST" action="{{ url_for('adddata') }}" enctype= "multipart/form-data">
+<form method="POST" action="{{ url_for('addAlldata') }}" enctype= "multipart/form-data">
         <label><h2> Upload CSV</h2></label>
 		<h4>Please choose the file you want to upload</h4>
         <input type="file" name="myfile"><br>
 		<input type="submit">
 </form>
-<a href="/">Home</a>
+{#<a href="/">Home</a>#}
 
 </body>
 </html>
