--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,8 @@
 {#<a href = "/addAlldata">Result of add</a>#}
 <br>
 <a href = "/displayAll">Display all records</a>
-{#<br>#}
-{#<a href = "/multiple">multiple all records</a>#}
+<br>
+<a href = "/display1000">Run query for 1000 times</a>
 
 </body>
 </html>
