--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,8 +11,8 @@
 <form method="POST" action="{{ url_for('addAlldata') }}" enctype= "multipart/form-data">
         <label><h2> Upload CSV</h2></label>
 		<h4>Please choose the file you want to upload</h4>
-        <input type="file" name="myfile"><br>
-		<input type="submit">
+        <input type="file" name="myfileCSV"><br>
+		<input type="submit" value="Upload">
 </form>
 {#<a href="/">Home</a>#}
 
