--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,7 @@
 <a href = "/displayAll">Display all records</a>
 <br>
 <a href = "/display1000">Run query for 1000 times</a>
-
+<br>
+<a href = "/displayMag">Magnitude random query</a>
 </body>
 </html>
