--- a/templates/display1000.html
+++ b/templates/display1000.html
@@ -9,12 +9,13 @@
 <h2>Bhangale, Riya Rajendra</h2><br>
 
 Time taken: {{ time }} seconds
+{#Is it Cached?: {{ isCache }}#}
 <table border=1>
 {#<tr>#}
 {#    <td></td>#}
 {#</tr>#}
 
-{% for rows in info %}
+{% for rows in data %}
 <tr>
 <td>{{ rows[1] }}</td>
 <td>{{ rows[2] }}</td>
