--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,18 @@
 {#<a href = "/addAlldata">Result of add</a>#}
 <br>
 <a href = "/displayAll">Display all records</a>
-<br>
-<a href = "/display1000">Run query for 1000 times</a>
-<br>
-<a href = "/displayMag">Magnitude random query</a>
+{#<br>#}
+{#<a href = "/display1000">Run query for 1000 times</a>#}
+{#<br>#}
+{#<a href = "/displayMag">Magnitude random query</a>#}
+
+<br><br>
+<h4>Point 5 </h4><br>
+<form action="/point5" method="POST">
+    Depth 1:<input type="text" name="dep1">
+    Depth 2:<input type="text" name="dep2">
+    Longitude: <input type="text" name="long">
+    <input type="submit" value="Search"><br><br>
+</form>
 </body>
 </html>
