--- a/templates/home.html
+++ b/templates/home.html
@@ -29,5 +29,15 @@
     Longitude: <input type="text" name="long">
     <input type="submit" value="Search"><br><br>
 </form>
+
+<br><br>
+<h4>Point 6 </h4><br>
+<form action="/point6" method="POST">
+    Number of Queries: <input type="text" name="qno">
+    Depth 1:<input type="text" name="dep11">
+    Depth 2:<input type="text" name="dep22">
+    <input type="submit" value="Search"><br><br>
+</form>
+
 </body>
 </html>
