--- a/templates/home.html
+++ b/templates/home.html
@@ -38,6 +38,14 @@
     Depth 2:<input type="text" name="dep22">
     <input type="submit" value="Search"><br><br>
 </form>
+<br><br>
+<h4>Point 7 </h4><br>
+<form action="/point7" method="POST">
+    Number of Queries: <input type="text" name="qno1">
+    Depth 1:<input type="text" name="dep111">
+    Depth 2:<input type="text" name="dep222">
+    <input type="submit" value="Search"><br><br>
+</form>
 
 </body>
 </html>
