--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
 <form action="/point5" method="POST">
     Depth 1:<input type="text" name="dep1">
     Depth 2:<input type="text" name="dep2">
-    Longitude: <input type="text" name="long">
+{#    Longitude: <input type="text" name="long">#}
     <input type="submit" value="Search"><br><br>
 </form>
 
@@ -47,5 +47,13 @@
     <input type="submit" value="Search"><br><br>
 </form>
 
+<br><br>
+<h4>Point 8 </h4><br>
+<form action="/point8" method="POST">
+    Number of Queries: <input type="text" name="qno11">
+    Depth 1:<input type="text" name="dep1111">
+    Depth 2:<input type="text" name="dep2222">
+    <input type="submit" value="Search"><br><br>
+</form>
 </body>
 </html>
