--- a/templates/point5.html
+++ b/templates/point5.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+
+  <script src="http://d3js.org/d3.v4.min.js"></script>
+  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
 </head>
 <body>
 
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
 
-<table border=1>
-<tr>
-    <td>Date</td>
-    <td>Latitude</td>
-    <td>Longitude</td>
-    <td>Depth Error</td>
-</tr>
+  <script type="text/javascript">
+    var svg = dimple.newSvg("body", 800, 600);
+    {#var data = [#}
+    {#  { "Word":"Hello", "Awesomeness":2000 },#}
+    {#  { "Word":"World", "Awesomeness":3000 }#}
+    {#];#}
+    var rdata = {{ data | tojson | safe }};
+    var chart = new dimple.chart(svg, rdata);
+    chart.addCategoryAxis("x", "mag");
+    chart.addMeasureAxis("y", "depth");
+    chart.addSeries(null, dimple.plot.bar);
+    chart.draw();
+  </script>
 
-{% for rows in data %}
-<tr>
-<td>{{ rows[1] }}</td>
-<td>{{ rows[2] }}</td>
-<td>{{ rows[3] }}</td>
-<td>{{ rows[10] }}</td>
-</tr>
 
-{% endfor %}
-</table>
 </body>
 </html>
