--- a/templates/point5.html
+++ b/templates/point5.html
@@ -9,13 +9,24 @@
 
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
+<table>
+{% for rows in data %}
+<tr>
+<td>{{ rows["mag"] }}</td>
+<td>{{ rows["depth"] }}</td>
+{#<td>{{ rows[2] }}</td>#}
+</tr>
+{% endfor %}
+</table>
+
+
 
   <script type="text/javascript">
     var svg = dimple.newSvg("body", 800, 600);
-    {#var data = [#}
-    {#  { "Word":"Hello", "Awesomeness":2000 },#}
-    {#  { "Word":"World", "Awesomeness":3000 }#}
-    {#];#}
+    var data = [
+      { "Word":"Hello", "Awesomeness":2000 },
+      { "Word":"World", "Awesomeness":3000 }
+    ];
     var rdata = {{ data | tojson | safe }};
     var chart = new dimple.chart(svg, rdata);
     chart.addCategoryAxis("x", "mag");
