--- a/templates/plotTest.html
+++ b/templates/plotTest.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
 </head>
 <body>
   <script type="text/javascript">
