--- a/templates/point5.html
+++ b/templates/point5.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
 </head>
 <body>
 
