--- a/templates/point5.html
+++ b/templates/point5.html
@@ -2,24 +2,13 @@
 <html>
 <head>
 
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="http://d3js.org/d3.v5.min.js"></script>
+  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
 </head>
 <body>
 
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
-<table>
-{% for rows in data %}
-<tr>
-<td>{{ rows["mag"] }}</td>
-<td>{{ rows["depth"] }}</td>
-{#<td>{{ rows[2] }}</td>#}
-</tr>
-{% endfor %}
-</table>
-
-
 
   <script type="text/javascript">
     var svg = dimple.newSvg("body", 800, 600);
@@ -34,7 +23,6 @@
     chart.addSeries(null, dimple.plot.bar);
     chart.draw();
   </script>
-
 
 </body>
 </html>
