--- a/templates/point5.html
+++ b/templates/point5.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <title></title>
 
-  <script src="http://d3js.org/d3.v5.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
 </head>
 <body>
 
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
 
+  <script src="http://d3js.org/d3.v5.min.js"></script>
+  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("body", 800, 600);
     {#var data = [#}
