--- a/templates/point5.html
+++ b/templates/point5.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title></title>
 
 </head>
@@ -11,8 +10,8 @@
 <h2>9054</h2>
 <h2>Bhangale, Riya Rajendra</h2><br>
 
-  <script src="http://d3js.org/d3.v5.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("body", 800, 600);
     {#var data = [#}
