--- a/templates/point5.html
+++ b/templates/point5.html
@@ -22,7 +22,7 @@
 
 <div id="chart">
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.1.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.3.0/dimple.latest.min.js"></script>
     <script type="text/javascript">
         {#alert("Javascript Working");#}
     var svg = dimple.newSvg("#chart", 800, 600);
