--- a/templates/home.html
+++ b/templates/home.html
@@ -23,37 +23,41 @@
 
 <br><br>
 <h4>Point 5 </h4><br>
-<form action="/point5" method="POST">
-    Depth 1:<input type="text" name="dep1">
-    Depth 2:<input type="text" name="dep2">
-{#    Longitude: <input type="text" name="long">#}
-    <input type="submit" value="Search"><br><br>
+<form action="/popRange" method="POST">
+Year: <input type="text" name="year"><br>
+Range1:<input type="text" name="r1">
+Range2:<input type="text" name="r2"><br>
+Range3:<input type="text" name="r3">
+Range4:<input type="text" name="r4"><br>
+Range5:<input type="text" name="r5">
+Range6:<input type="text" name="r6"><br>
+<input type="submit" value="submit"><br><br>
 </form>
 
-<br><br>
-<h4>Point 6 </h4><br>
-<form action="/point6" method="POST">
-    Number of Queries: <input type="text" name="qno">
-    Depth 1:<input type="text" name="dep11">
-    Depth 2:<input type="text" name="dep22">
-    <input type="submit" value="Search"><br><br>
-</form>
-<br><br>
-<h4>Point 7 </h4><br>
-<form action="/point7" method="POST">
-    Number of Queries: <input type="text" name="qno1">
-    Depth 1:<input type="text" name="dep111">
-    Depth 2:<input type="text" name="dep222">
-    <input type="submit" value="Search"><br><br>
-</form>
-
-<br><br>
-<h4>Point 8 </h4><br>
-<form action="/point8" method="POST">
-    Number of Queries: <input type="text" name="qno11">
-    Depth 1:<input type="text" name="dep1111">
-    Depth 2:<input type="text" name="dep2222">
-    <input type="submit" value="Search"><br><br>
-</form>
+{#<br><br>#}
+{#<h4>Point 6 </h4><br>#}
+{#<form action="/point6" method="POST">#}
+{#    Number of Queries: <input type="text" name="qno">#}
+{#    Depth 1:<input type="text" name="dep11">#}
+{#    Depth 2:<input type="text" name="dep22">#}
+{#    <input type="submit" value="Search"><br><br>#}
+{#</form>#}
+{#<br><br>#}
+{#<h4>Point 7 </h4><br>#}
+{#<form action="/point7" method="POST">#}
+{#    Number of Queries: <input type="text" name="qno1">#}
+{#    Depth 1:<input type="text" name="dep111">#}
+{#    Depth 2:<input type="text" name="dep222">#}
+{#    <input type="submit" value="Search"><br><br>#}
+{#</form>#}
+{##}
+{#<br><br>#}
+{#<h4>Point 8 </h4><br>#}
+{#<form action="/point8" method="POST">#}
+{#    Number of Queries: <input type="text" name="qno11">#}
+{#    Depth 1:<input type="text" name="dep1111">#}
+{#    Depth 2:<input type="text" name="dep2222">#}
+{#    <input type="submit" value="Search"><br><br>#}
+{#</form>#}
 </body>
 </html>
