--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 {#<a href = "/displayMag">Magnitude random query</a>#}
 
 <br><br>
-<h4>Point 5 </h4><br>
+<h4>Population Range </h4><br>
 <form action="/popRange" method="POST">
 Year: <input type="text" name="year"><br>
 Range1:<input type="text" name="r1">
@@ -31,6 +31,23 @@ Range3:<input type="text" name="r3">
 Range4:<input type="text" name="r4"><br>
 Range5:<input type="text" name="r5">
 Range6:<input type="text" name="r6"><br>
+<input type="submit" value="submit"><br><br>
+</form>
+
+<br><br>
+<h4>Education BLPercent</h4>
+<form action="/edu" method="POST">
+E code:<input type="text" name="loc">
+Year1:<input type="text" name="y1">
+Year2:<input type="text" name="y2">
+<input type="submit" value="submit"><br><br>
+</form>
+
+<br><br>
+<h4>Population Range Increment </h4><br>
+<form action="/popRangeInc" method="POST">
+Year: <input type="text" name="year1"><br>
+Range: <input type="text" name="r11">
 <input type="submit" value="submit"><br><br>
 </form>
 
