--- a/templates/popRange.html
+++ b/templates/popRange.html
@@ -31,11 +31,22 @@
     var svg = dimple.newSvg("#chart", 800, 600);
     var rdata = {{ data | tojson | safe }};
     var chart = new dimple.chart(svg, rdata);
-    chart.setBounds(80, 30, 480, 330);
+    {#chart.setBounds(80, 30, 480, 330);#}
     chart.addMeasureAxis("y", "state");
     chart.addCategoryAxis("x", "range");
-    chart.addColorAxis("state", ["#333333","#666666","#999999"]);
-    chart.addSeries(null, dimple.plot.bar);
+    {#chart.addColorAxis("state", ["#333333","#666666","#999999"]);#}
+        chart.defaultColors = [
+          new dimple.color("#3498db", "#2980b9", 1), // blue
+          new dimple.color("#e74c3c", "#c0392b", 1), // red
+          new dimple.color("#2ecc71", "#27ae60", 1), // green
+          new dimple.color("#9b59b6", "#8e44ad", 1), // purple
+          new dimple.color("#95a5a6", "#7f8c8d", 1), // gray
+          new dimple.color("#FF0000", 1), // red
+          new dimple.color("#00FF00", 1), // green
+
+      ];
+    chart.addSeries("range", dimple.plot.bar);
+    chart.addLegend(200, 10, 380, 20, "right");
     chart.draw();
   </script>
 
