--- a/templates/popRangeInc.html
+++ b/templates/popRangeInc.html
@@ -42,6 +42,8 @@
           new dimple.color("#2ecc71", "#27ae60", 1), // green
           new dimple.color("#9b59b6", "#8e44ad", 1), // purple
           new dimple.color("#95a5a6", "#7f8c8d", 1), // gray
+          new dimple.color("#FF0000", 1), // red
+          new dimple.color("#00FF00", 1), // green
 
       ];
     chart.addLegend(600, 25, 90, 300, "left");
