--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@ TotalPop Range2:<input type="text" name="r2"><br>
 {#</form>#}
 
 <br><br>
-<h4>Population Range Increment </h4><br>
+<h4>Range Increment </h4><br>
 <form action="/popRangeInc" method="POST">
 Range: <input type="text" name="r11">
 <input type="submit" value="submit"><br><br>
