--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 {#<a href = "/displayMag">Magnitude random query</a>#}
 
 <br><br>
-<h4>Population Range </h4><br>
+<h4>Total Population Range </h4><br>
 <form action="/popRange1" method="POST">
 {#Year: <input type="text" name="year"><br>#}
 TotalPop Range1:<input type="text" name="r1">
