--- a/templates/home.html
+++ b/templates/home.html
@@ -30,6 +30,14 @@ TotalPop Range2:<input type="text" name="r2"><br>
 <input type="submit" value="submit"><br><br>
 </form>
 
+
+<br><br>
+<h4>Point 8</h4>
+<form action="/last" method="POST">
+{#Year: <input type="text" name="year"><br>#}
+Enter Number:<input type="text" name="no">
+<input type="submit" value="submit"><br><br>
+</form>
 {#<br><br>#}
 {#<h4>Education BLPercent</h4>#}
 {#<form action="/edu" method="POST">#}
